# CyberTipParser

./: README.md  main.py  pyproject.toml  requirements.txt
ctp/: ctp.py
